		-[Core] Moved DecoratorContext to the SimpleInjector root namespace (fixes #7).
		-[Core] Removed RegisterSingleDecorator extension methods (fixed #7).
		-[Core] Removed RegisterAllOpenGeneric extension methods (fixes #7).
		-[Core] Removed RegisterOpenGeneric and RegisterSingleOpenGeneric extension methods (fixes #7).
		-[Core] Moved OpenGenericPredicateContext to the SimpleInjector root namespace (fixes #7).
		-[Core] Second argument of Container.Register(Type, Type) renamed from "implementation" to
		 "implementationType".
		-[Core] Removed RegisterManyForOpenGeneric extension methods (fixes #7).
		-[Core] Removed GetTypesToRegister extension methods (fixes #7).
		-[Core] Calling Verify() or GetInstance will always cause the container to check for lifestyle
		 mismatches unless Container.Options.SuppressLifestyleMismatchVerification is set (fixes #46).
		-[Core] Calling Verify() will now standard do diagnostic analysis (fixes #10).
		-[Core] Class constraint "where TService : class" added to GetAllInstances<TService>() method.
		-[Core] Rename PotentialLifestyleMismatchDiagnosticResult class to LifestyleMismatchDiagnosticResult
		 (fixes #84).
		-[LifetimeScoping] Made the LifetimeScope class internal (fixes #12).
		-[LifetimeScoping] Removed SimpleInjectorLifetimeScopeExtensions.EnableLifetimeScoping method (fixes #12).
		-[Core] UnregisteredTypeEventArgs constructor made internal.
		-[Wcf] Made the WcfOperationScope class internal (fixes #12).
		-[Wcf] Removed the SimpleInjectorWcfExtensions.EnablePerWcfOperationLifestyle method (fixes #12).
		-[Web] Removed the SimpleInjectorWebExtensions.RegisterForDisposal method (fixes #12).
		-[Mvc] Removed the SimpleInjectorMvcExtensions.RegisterMvcAttributeFilterProvider method (fixes #12).
		-[WebApi] Removed the SimpleInjectorWebApiExtensions.RegisterWebApiFilterProvider method (fixes #12).

	Bug fixes:
		-[Core] Registering a Func<object> using UnregisteredTypeEventArgs.Register(Func<object>) caused the